--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
-  "name": "souschef",
+  "name": "flying-taxi-bengaluru",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.8.0",
-    "@google/genai": "^1.6.0",
-    "@prisma/client": "^6.10.1",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-slot": "^1.2.3",
-    "auth": "^1.2.3",
+    "@types/leaflet": "^1.9.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.518.0",
-    "next": "15.3.0",
-    "next-auth": "^5.0.0-beta.28",
+    "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.4",
-    "zod": "^3.25.67"
+    "tw-animate-css": "^1.3.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -36,7 +34,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.0",
-    "prisma": "^6.10.1",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
